# rpg-engine

./: .dockerignore  .gitignore  .tool-versions  AGENTS.md  EQUIPMENT_SPRITE_MAPPING.md  GSM_ARCHITECTURE_PATTERNS.md  PAPERDOLL_IMPLEMENTATION.md  PROTOCOL_CHANGES.md  README.md  WEBSOCKET_FIXES_SUMMARY.md  WEBSOCKET_MODERNIZATION_STATUS.md  WEBSOCKET_PROTOCOL.md  WEBSOCKET_TEST_IMPROVEMENTS.md  WEBSOCKET_TEST_MODERNIZATION.md  generate_huge_map.py  generate_obstacle_map.py  pyproject.toml  pytest.ini  run_client.sh  setup_client.py  test_client.sh  test_login.py  test_map_chunks.py  test_new_fixtures.py  test_ws.py  test_ws_simple.py
client/: .gitignore  Dockerfile
client/src/: chunk_manager.py  client.py  client_config.yml  client_state.py  config.py  entities.py  game_states.py  legacy_protocol_handler.py  legacy_rpg_client.py  logging_config.py  main.py  paperdoll_renderer.py  rpg_client.py  sprite_manager.py  tileset_manager.py  ui_components.py  ui_panels.py
client/src/assets/: __init__.py
client/src/chat/: __init__.py  command_registry.py
client/src/core/: __init__.py  event_bus.py  state_machine.py
client/src/game/: __init__.py  client_state.py
client/src/input/: __init__.py  input_manager.py
client/src/network/: __init__.py  connection.py  handlers.py  message_sender.py
client/src/rendering/: __init__.py  camera.py  customisation_panel.py  entity_renderer.py  help_modal.py  icon_manager.py  map_renderer.py  paperdoll_renderer.py  renderer.py  sprite_manager.py  ui_panels.py  ui_renderer.py
client/src/ui/: __init__.py  colors.py  screens.py
client/src/utils/: __init__.py
common/src/: __init__.py  constants.py  protocol.py  websocket_utils.py
common/src/sprites/: __init__.py  animation.py  appearance.py  enums.py  equipment_mapping.py  icon_mapping.py  paths.py  visual_state.py
docker/: Dockerfile.test  docker-compose.client.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  PRODUCTION_STARTUP.md  WEBSOCKET_EXAMPLES.md  WEBSOCKET_PROTOCOL.md  WEBSOCKET_QUICK_REFERENCE.md  code_review_done.md
scripts/: setup_idylwild_icons.py  setup_lpc_sprites.py
server/: Dockerfile  alembic.ini  config.yml
server/alembic/: env.py
server/alembic/versions/: 9e1a169531d4_add_icon_sprite_id_and_equipped_sprite_.py  ab543bb48349_change_map_id_from_integer_to_string.py  c59e100c5e5a_initial_migration.py  d7f3a8b9c1e2_add_skills_system.py  e8a4b2c3d5f6_add_player_skills_fk_indexes.py  f1a2b3c4d5e6_add_item_system.py  f2f7f95b2638_create_entities_table.py  g2b3c4d5e6f7_add_equipment_quantity.py  h3c4d5e6f7g8_add_current_hp.py  i4d5e6f7g8h9_add_max_hp_and_disengage_radius_to_entities.py  j5e6f7g8h9i0_entity_rework_add_type_and_appearance.py  k6f7g8h9i0j1_add_player_appearance.py  l7m8n9o0p1q2_rename_x_coord_y_coord_to_x_y.py
server/icons/: .gitignore  ATTRIBUTION.md  README.md
server/maps/: huge_world_map.tmx  large_test_map.tmx  obstacle_test_map.tmx  samplemap.tmx  test_map.tmx
server/scripts/: add_items_direct.py  add_items_to_player.py
server/sprites/: .gitignore  ATTRIBUTION.md  README.md
server/src/: main.py
server/src/api/: appearance.py  assets.py  auth.py  connection_manager.py  websockets.py
server/src/benchmarks/: capacity_benchmark.py  run_capacity_test.py
server/src/core/: appearance.py  concurrency.py  config.py  constants.py  database.py  entities.py  entity_utils.py  humanoids.py  items.py  logging_config.py  metrics.py  monsters.py  security.py  skills.py
server/src/game/: game_loop.py
server/src/models/: __init__.py  base.py  entity.py  item.py  player.py  skill.py
server/src/schemas/: entity.py  item.py  player.py  service_results.py  skill.py  token.py
server/src/services/: ai_service.py  appearance_options_service.py  authentication_service.py  batch_sync_service.py  chat_service.py  combat_service.py  connection_service.py  entity_service.py  entity_spawn_service.py  equipment_service.py  game_state_manager.py  ground_item_service.py  ground_item_valkey_service.py  hp_service.py  inventory_service.py  inventory_service.py.backup  item_service.py  map_service.py  movement_service.py  pathfinding_service.py  player_service.py  player_state_valkey_service.py  (+6 more)
(+139 files in other folders)
